refactor: CORS 설정을 위한 허용된 출처를 프로퍼티로 변경